添加对 Java 11 的支持