@@ -1,28 +1,79 @@
-group 'org.glavo'
-version '3.3-SNAPSHOT'
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.gradle:osdetector-gradle-plugin:1.6.0'
+    }
+}
 
 apply plugin: 'java'
+apply plugin: 'com.google.osdetector'
 
-sourceCompatibility = 1.8
+ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
 
-if(sourceCompatibility.isJava9Compatible()) {
-    sourceSets.main.java.srcDirs += 'src/main/java9'
+
+sourceSets {
+    java9 {
+        java {
+            srcDirs = ['src/main/java9']
+        }
+    }
 }
 
 repositories {
     mavenCentral()
 }
 
+dependencies {
+    compileOnly "org.openjfx:javafx-base:11:$platform"
+    compileOnly "org.openjfx:javafx-graphics:11:$platform"
+    compileOnly "org.openjfx:javafx-controls:11:$platform"
+    
+    java9Implementation files(sourceSets.main.output.classesDirs) { builtBy compileJava }
+}
+
+
+compileJava {
+    sourceCompatibility = 8
+    targetCompatibility = 8
+}
+
+compileJava9Java {
+    sourceCompatibility = 9
+    targetCompatibility = 9
+}
+
 jar {
-    manifest {
-        attributes 'Implementation-Version': '1.2',
-                'Main-Class': 'org.glavo.viewer.gui.Viewer'
+    into('META-INF/versions/9') {
+        from sourceSets.java9.output
     }
 }
 
-compileJava.options.encoding = "UTF-8"
-compileTestJava.options.encoding = "UTF-8"
-javadoc.options.encoding = "UTF-8"
+task release(type: Jar) {
+    archiveName = "${rootProject.name}-${version}-release.jar"
+    from { configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
+
+task run(type: JavaExec, dependsOn: jar) {
+    main = viewerMainClassName
+    classpath = files(sourceSets.main.compileClasspath, jar.archivePath)
+    jvmArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'javafx.controls'
+    ]
+}
+
+
+tasks.withType(Javadoc) {
+    options.encoding = 'UTF-8'
+}
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 
 tasks.withType(ProcessResources).each { task ->
     task.from(task.getSource()) {
@@ -31,7 +82,11 @@ tasks.withType(ProcessResources).each { task ->
     }
 }
 
-task run(type: JavaExec, dependsOn: jar) {
-    main = "-jar"
-    args jar.archivePath
+tasks.withType(Jar) {
+    manifest {
+        attributes 'Implementation-Version': '1.2',
+                'Main-Class': viewerMainClassName,
+                'Multi-Release': 'true'
+
+    }
 }
